--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "my-po-addon",
   "version": "1.0.0",
-  "main": "api/create-po.js",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "express": "^4.19.2",
     "pdfkit": "^0.15.0",
     "axios": "^1.7.7",
     "form-data": "^4.0.0"
